fix header spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -159,6 +159,8 @@
 /* #region header */
 .app-header {
     background-image: url("./img/jumbo.png");
+    background-size: cover;
+
 }
 
 .head-bar {
@@ -169,13 +171,14 @@
     padding: 1rem;
 }
 
-.app-link {
-    display: flex;
-    justify-content: space-around;
-    padding-left: 20%;
-    padding-right: 20%;
+/* links centrali header */
+.app-link a {
+    margin: 0 1rem;
+    text-decoration: none;
+    color: aliceblue;
 }
 
+/* links centrali header */
 .app-login button {
     border-radius: 50px;
     padding: 7px 10px;
@@ -194,16 +197,16 @@
 .jumbo h1 {
     color: aliceblue;
     text-align: center;
-    padding: 3rem;
+    padding: 1rem;
 }
 
 .jumbo p {
     color: aliceblue;
     text-align: center;
-    padding: 3rem;
+    padding: 1rem 3rem;
 }
 
-/* bottoni jumbo */
+/* ---------------bottoni jumbo */
 .jumbo .download_btn_browser {
     display: flex;
     flex-direction: row;
@@ -213,22 +216,29 @@
 .jumbo #download-btn {
     border: none;
     border-radius: 50px;
-    padding: 20px;
+    padding: 10px 20px;
     width: fit-content;
     margin: 1rem;
+
+}
+
+.jumbo #download-btn i {
+    padding-right: 0.5rem;
 
 }
 
 .jumbo #browser-link {
     border: none;
     border-radius: 50px;
-    padding: 20px;
+    padding: 10px 20px;
     width: fit-content;
     margin: 1rem;
     color: aliceblue;
     background-color: var(--dark_grey);
 
 }
+
+/* ---------------bottoni jumbo */
 
 /* ----------------------------jumbo */
 
